styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;600;800&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Inter', sans-serif;
}

html {
    scroll-behavior: smooth;
}

li {
    list-style-type: none;
}

a {
    text-decoration: none;
}

.row {
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
    padding: 32px;
}

/* 

NAVIGATION

*/

.logo {
    width: 50px;
    font-size: 24px;
    font-weight: bold;
    margin: 0 12px 0 0;
}


.logo__text {
    font-size: 24px;
    font-weight: bold;
    /*padding-right: 560px;*/
}

.logo__text:hover {
    color: #6415ff;
    cursor: pointer;
}

.nav__bar,
.nav__links,
.logo__text {
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: #243e63;
}

.nav__link {
    margin: 0px 24px;
    text-decoration: none;
    font-size: 24px;
    justify-content: center;
    

}

.nav__link--primary {
    background-color: black;
}

